--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="styles/leaderboard.css" />
     <style>
       * {
-        cursor: url('/assets/rudolph-cursor.png'), auto;
+        cursor: url('https://raw.githubusercontent.com/Useful-Dogus/santa-endless-runner/refs/heads/main/assets/rudolph-cursor.png'),
+          auto;
       }
     </style>
   </head>
